--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </section>
 
       <section id="videos">
-        <iframe id="video" width="695" height="391" src="https://www.youtube.com/embed/UeYjxEqSbgw" title='Trailer Versi 2.3: "Selamat Tinggal, Penacony" | Honkai: Star Rail' allowfullscreen></iframe>
+        <iframe id="video" src="https://www.youtube.com/embed/UeYjxEqSbgw" title='Trailer Versi 2.3: "Selamat Tinggal, Penacony" | Honkai: Star Rail' allowfullscreen></iframe>
       </section>
     </main>
     <footer>
